    - More plants, fewer Power Slugs
  Optimizations:
    - Improved rendering of jump pad visualisation arrow
  Bugfixes:
    - Fixed Space Elevator not being rotatable due to being square
    - Fixed Onboarding locale entries
    - Fix build gun not consuming items for placeholder entities
    - Make technology items only-in-cursor
    - Fix invulnerability to gas when using the hover pack or jetpack, and also the game crashing if you die
    - Allow pipeline construction on water again
    - Make Particle Accelerator shut down in a blackout
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 2021.07.02
  Changes:
    - Drone Port now uses a Train Stop internally so it can be opened from the map view
    - Drones now try to only pull as many batteries as needed for a round trip, rather than a full stack
  Optimizations:
    - MASSIVE performance improvement of resource spawner. This does mean there's a small chance of "mixed patches" but that's worth it for code that's 60x faster!
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 2021.07.04
  Changes:
    - Collapsing the to-do list now keeps the item list open, only hiding the ingredient list
    - Mining a building that is on your to-do list increments the list by one
    - To-do list now responds to Craft Bench and Equipment Workshop items
---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 2021.07.06
  Optimizations:
    - Further performance improvements and refactoring
  Modding:
    - Added compatibility with Text Plates
    - Added compatibility with BottleneckLite
---------------------------------------------------------------------------------------------------
Version: 0.8.5
Date: 2021.07.07
  Combat Balancing:
    - Unarmed melee strikes now stun the target for a little longer.