@@ -9,7 +9,7 @@ train-loading=Train loading
 
 [tips-and-tricks-item-description]
 introduction=Welcome to Satisfactorio. It is reasonably expected that you have a grasp on how Factorio works if you're playing an overhaul mod. Due to just how much is changed in this mod, many vanilla tips-and-tricks aren't applicable, so they have been removed. Instead, Satisfactorio-specific tips and tricks have been added.\nYou can unlock them through gameplay, or right now with the __CONTROL_STYLE_BEGIN__/unlock-tips__CONTROL_STYLE_END__ command.
-melee-combat=Using the [item=xeno-zapper] you can engage enemies in melee combat. This weapon knocks back and stuns any target hit with it.\nYou can attack twice in succession before a short cooldown. Be sure to keep a safe distance from enemies during this downtime.
+melee-combat=Using the [item=xeno-zapper] you can engage enemies in melee combat. This weapon knocks back and stuns any target hit with it.\nYou can attack twice in succession before a short cooldown. Be sure to keep a safe distance from enemies during this downtime.\n\nIf you find yourself without a weapon, you can still punch targets. This won't damage them but will stun them for a few seconds.
 build-gun=Select a building to put it in your cursor. The material cost is shown. You can then drag as many buildings as you want and can afford, as materials are pulled from your inventory.\n__ALT_CONTROL__2__clear-cursor__ will put the Build gun away.\nWhen you dismantle a building, its material components are returned to your inventory.
 power-trip=If your power consumption is greater than your production capacity, your factory will black out due to the insufficient supply.\nPay attention to the electric network statistics, if you want to identify insufficient power production before it's too late.\nIf a power trip happens, fix the underlying cause before resetting the fuse.
 conveyor-belts=In Satisfactorio, there are no Inserters. Instead, [entity=conveyor-belt-mk-1] can be connected directly to buildings at designated spots. Use Alt-mode to reveal the indicators.\n[img=utility.indication_line] marks a machine input.\n[img=utility.indication_arrow] marks a machine output.
