@@ -400,5 +400,7 @@ Date: 2021.07.06
 ---------------------------------------------------------------------------------------------------
 Version: 0.8.5
 Date: 2021.07.07
+  Changes:
+    - Added Tips + Tricks entry explaining how (not) to use Train conditions
   Combat Balancing:
-    - Unarmed melee strikes now stun the target for a little longer.
+    - Unarmed melee strikes now stun the target for much longer
